# tp-final-distributed-computing

./: .gitignore  CMakeLists.txt  README.md  run.sh
common/lamport/: lamport.cpp  lamport.hpp
common/logger/: CMakeLists.txt  logger.cpp  logger.hpp
common/peerstatus/: CMakeLists.txt  peer_status.cpp  peer_status.hpp
common/protocols/: CMakeLists.txt  ringElection.proto
common/protocols/compressorNode/: CMakeLists.txt  compressorNode.proto
common/protocols/discoverNodes/: CMakeLists.txt  discoverNodes.proto
common/protocols/ringElection/: CMakeLists.txt  ringElection.proto
common/utils/: CMakeLists.txt  utils.hpp
compressor/: CMakeLists.txt  main.cpp  node_status.cpp  node_status.hpp  rpc_compressor.cpp  rpc_discover.cpp  rpc_discover.hpp  rpc_election.cpp  rpc_election.hpp
node/: CMakeLists.txt  main.cpp  rpc_compressor.cpp  rpc_compressor.hpp  rpc_discover.hpp  rpc_election.cpp
sensor/: CMakeLists.txt  main.cpp  sensorState.cpp
sources/: main.cpp
sources/node/: node.hpp  nodeType.hpp
sources/sensor/: sensor.hpp  sensorState.cpp  sensorState.hpp
